force-app/main/default/objects/Material_Request__c/Material_Request__c.object-meta.xml
<CustomObject>
    <description>Material request raised by a site engineer against a WBS item, awaiting manager approval before an RFQ is raised.</description>
    <label>Material Request</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>