force-app/main/default/objects/Material_Request__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Material Requests</relationshipLabel>
    <relationshipName>Approved_Material_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>