force-app/main/default/objects/Material_Request__c/fields/Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Date__c</fullName>
    <label>Required Date</label>
    <type>Date</type>
</CustomField>