force-app/main/default/objects/Material_Request__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>nos</fullName><default>true</default><label>nos</label></value>
            <value><fullName>kg</fullName><default>false</default><label>kg</label></value>
            <value><fullName>ton</fullName><default>false</default><label>ton</label></value>
            <value><fullName>m</fullName><default>false</default><label>m (Meter)</label></value>
            <value><fullName>m2</fullName><default>false</default><label>m² (Sq. Meter)</label></value>
            <value><fullName>m3</fullName><default>false</default><label>m³ (Cu. Meter)</label></value>
            <value><fullName>bag</fullName><default>false</default><label>bag</label></value>
            <value><fullName>set</fullName><default>false</default><label>set</label></value>
            <value><fullName>roll</fullName><default>false</default><label>roll</label></value>
            <value><fullName>lump sum</fullName><default>false</default><label>lump sum</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>